Fix: Letterspacing on headers

--- a/_sass/skeleton.scss
+++ b/_sass/skeleton.scss
@@ -136,11 +136,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 2rem;
   font-family: 'WYekan',"Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300; }
-h1 { font-size: 3.5rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.0rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 2.7rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h1 { font-size: 3.5rem; line-height: 1.2;  letter-spacing: 0; }
+h2 { font-size: 3.0rem; line-height: 1.25; letter-spacing: 0; }
+h3 { font-size: 2.7rem; line-height: 1.3;  letter-spacing: 0; }
+h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: 0; }
+h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: 0; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 /* Larger than phablet */
